2009-10-08  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/admin/connections.py:
	Store PBConnectionInfo in RecentConnection instances, not
	ConnectionInfo. A RecentConnection will never contain shell globs, so
	it's safe to parse the ConnectionInfo object into a PBConnectionInfo
	immediately in the constructor.
	Avoids breaking other parts of code due to the change of the
	RecentConnection 'info' instance variable type introduced in r8228.
	Closes #1373.

2009-10-07  Guillaume Quintard  <guillaume.quintard@flumotion.com>

	reviewed by: Zaheer Abbas Merali

	* flumotion/component/base/scheduler.py:
	* flumotion/component/bouncers/icalbouncer.py:
	* flumotion/test/test_icalbouncer.py:
	Revokes keycards in case the new calendar hasn't a current event.
	Closes #1157

2009-10-06  Guillaume Quintard  <guillaume.quintard@flumotion.com>

	reviewed by: Jan Urbanski, Sebastien Merle

	* flumotion/component/bouncers/icalbouncer.py:
	* flumotion/test/test_icalbouncer.py:
	Handles overlapping events in the ical-bouncer and adds the proper tests.
	Closes #1374

2009-10-06  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/test/test_common_xdg.py:
	Avoid assertTrue in the tests, for dinosaur-age Twisted compatibility.

2009-10-06  Jan Urbanski  <jurbanski@flumotion.com>

	reviewed by: Sebastien Merle

	* flumotion/admin/connections.py:
	Implement default connection user and password file. The file looked
	for is named 'connections' and should be located in a location
	confirming to the XDG Base Directory spec. Usually, that means
	$HOME/.config/flumotion/connections.

	The format is an XML file containing a <connections> element, followed
	by a list of <connection> elements, that should be similar to the
	format of recent connection files, but can contain shell globs in the
	'host', 'port', 'use_insecure' and 'user' fields.

	Closes #1373.

	* flumotion/test/test_admin_connections.py:
	Extend the existing tests for recent connections and test the new